Simple representation + rotation code almost complete

--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 WeiTracer
-Copyright © 2009-2010 Wei Yeh
+Copyright © 2009-2010 Wei Yeh :: weicool@gmail.com
 Developed on Mac OS X Snow Leopard
 
 #####################
